--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,3 +8,8 @@ license = "GPL-3.0"
 [dependencies]
 assert_approx_eq = "1.0.0"
 rand = "0.3.15"
+
+[dev-dependencies]
+serde = "1.0.10"
+csv = "1.0.0-beta.4"
+serde_derive = "1.0.10"
