fixing keyword issue in cargo.toml

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,7 +5,7 @@ authors = ["Afshin Mehrabani <afshin.meh@gmail.com>"]
 homepage = "http://juggernaut.rs"
 repository = "https://github.com/afshinm/juggernaut"
 readme = "README.md"
-keywords = ["ai", "neural network", "deep learning"]
+keywords = ["ai", "neural-network", "deep-learning"]
 categories = ["science", "algorithms"]
 description = "Neural Network in Rust"
 license = "GPL-3.0"
