--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,19 @@
 language: rust
 
 script: make test
+
+after_success:
+  - '[ $TRAVIS_RUST_VERSION = stable ] &&
+    LOCAL="~/.local" && export PATH=$LOCAL/bin:$PATH &&
+    wget https://github.com/SimonKagstrom/kcov/archive/master.tar.gz &&
+    tar xzf master.tar.gz && mkdir kcov-master/build && cd kcov-master/build &&
+    cmake -DCMAKE_INSTALL_PREFIX:PATH=$LOCAL .. && make && make install && cd ../.. &&
+    ls target/debug &&
+    RUSTFLAGS="-C link-dead-code" cargo test --no-run &&
+    for file in target/debug/juggernaut-*; do
+      if [[ "${file: -2}" != ".d" ]]; then
+        mkdir -p "target/cov/$(basename $file)";
+        kcov --exclude-pattern=/.cargo,/usr/lib --verify "target/cov/$(basename $file)" "$file";
+      fi;
+    done &&
+    kcov --coveralls-id=$TRAVIS_JOB_ID --merge target/cov target/cov/*'
